RESOLVED FIXED 103939
[CSS Exclusions] ExclusionShape inlines should use isFlippedBlocksWritingMode()
https://bugs.webkit.org/show_bug.cgi?id=103939
Summary [CSS Exclusions] ExclusionShape inlines should use isFlippedBlocksWritingMode()
Hans Muller
Reported 2012-12-03 15:37:12 PST
The protected ExclusionShape inlines, like minYForLogicalLine(), now use isFlippedBlocksWritingMode() instead of testing for RightToLeftWritingMode directly. This changeimproves consistency with the rest of WebKit and will work correctly if "horizontal-bt" writing-mode support is ever added.
Attachments
Patch (2.72 KB, patch)
2012-12-03 16:06 PST, Hans Muller
no flags
Hans Muller
Comment 1 2012-12-03 16:06:50 PST
Created attachment 177362 [details] Patch Elliot Sprehn suggested factoring this small cleanup out of the patch for https://bugs.webkit.org/show_bug.cgi?id=103327.
Dirk Schulze
Comment 2 2012-12-04 11:43:41 PST
Comment on attachment 177362 [details] Patch LGTM. r=me
WebKit Review Bot
Comment 3 2012-12-04 12:29:25 PST
Comment on attachment 177362 [details] Patch Rejecting attachment 177362 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ripts/update-webkit line 152. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource From http://git.chromium.org/external/Webkit 9cffc45..a0bd058 HEAD -> origin/HEAD error: Ref refs/remotes/origin/master is at a0bd0584a2eb25a8bb88b2de129e3453f2ab97d7 but expected 9cffc451c10239895188285fa8cdb2dbd36f385d ! 9cffc45..a0bd058 master -> origin/master (unable to update local ref) Died at Tools/Scripts/update-webkit line 152. Full output: http://queues.webkit.org/results/15138298
WebKit Review Bot
Comment 4 2012-12-04 19:52:38 PST
Comment on attachment 177362 [details] Patch Rejecting attachment 177362 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ripts/update-webkit line 152. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource From http://git.chromium.org/external/Webkit 4c9966d..c0a4c3a HEAD -> origin/HEAD error: Ref refs/remotes/origin/master is at c0a4c3a40ce96884ae4c1472ef9d4edf6af9b111 but expected 4c9966dabd73e7df4d0cfc1858ece45aeb05b888 ! 4c9966d..c0a4c3a master -> origin/master (unable to update local ref) Died at Tools/Scripts/update-webkit line 152. Full output: http://queues.webkit.org/results/15158110
Eric Seidel (no email)
Comment 5 2012-12-04 23:44:10 PST
Comment on attachment 177362 [details] Patch I believe abarth has fixed the cq for now.
WebKit Review Bot
Comment 6 2012-12-05 00:04:53 PST
Comment on attachment 177362 [details] Patch Clearing flags on attachment: 177362 Committed r136647: <http://trac.webkit.org/changeset/136647>
WebKit Review Bot
Comment 7 2012-12-05 00:04:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.