[CSS Exclusions] ExclusionShape inlines should use isFlippedBlocksWritingMode() https://bugs.webkit.org/show_bug.cgi?id=103939

Patch by Hans Muller <hmuller@adobe.com> on 2012-12-05
Reviewed by Dirk Schulze.

Just a minor cleanup: the protected ExclusionShape inlines, like minYForLogicalLine(),
now use isFlippedBlocksWritingMode() instead of testing for RightToLeftWritingMode directly.
This changeimproves consistency with the rest of WebKit and will work correctly
if "horizontal-bt" writing-mode support is ever added.

No new tests were added since the existing tests cover these methods.

* rendering/ExclusionShape.h:
(WebCore::ExclusionShape::minYForLogicalLine):
(WebCore::ExclusionShape::maxYForLogicalLine):
(WebCore::ExclusionShape::internalToLogicalBoundingBox):

Canonical link: https://commits.webkit.org/122229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136647 268f45cc-cd09-0410-ab3c-d52691b4dbfc